; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_d3d11_shaders.c_D3D11_CompileVertexShader.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_d3d11_shaders.c_D3D11_CompileVertexShader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i8*, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }

@E_FAIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [52 x i8] c"Failed to create the flat vertex shader. (hr=0x%lX)\00", align 1
@D3D11_CompileVertexShader.layout = internal global [2 x %struct.TYPE_10__] [%struct.TYPE_10__ { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0), i32 0, i32 129, i32 0, i32 131, i32 130, i32 0 }, %struct.TYPE_10__ { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i32 0, i32 0), i32 0, i32 128, i32 0, i32 131, i32 130, i32 0 }], align 16
@.str.1 = private unnamed_addr constant [9 x i8] c"POSITION\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"TEXCOORD\00", align 1
@.str.3 = private unnamed_addr constant [53 x i8] c"Failed to create the vertex input layout. (hr=0x%lX)\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.TYPE_9__*, i8*, %struct.TYPE_8__*)* @D3D11_CompileVertexShader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @D3D11_CompileVertexShader(i32* %0, i32* %1, %struct.TYPE_9__* %2, i8* %3, %struct.TYPE_8__* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_9__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %9, align 8
  store i8* %3, i8** %10, align 8
  store %struct.TYPE_8__* %4, %struct.TYPE_8__** %11, align 8
  %14 = load i32, i32* @E_FAIL, align 4
  store i32 %14, i32* %12, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i32* @D3D11_CompileShader(i32* %15, i32* %16, %struct.TYPE_9__* %17, i8* %18, i32 0)
  store i32* %19, i32** %13, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %5
  br label %65

23:                                               ; preds = %5
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %13, align 8
  %28 = call i64 @ID3D10Blob_GetBufferPointer(i32* %27)
  %29 = inttoptr i64 %28 to i8*
  %30 = load i32*, i32** %13, align 8
  %31 = call i32 @ID3D10Blob_GetBufferSize(i32* %30)
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 1
  %34 = call i32 @ID3D11Device_CreateVertexShader(i32 %26, i8* %29, i32 %31, i32* null, i32* %33)
  store i32 %34, i32* %12, align 4
  %35 = load i32, i32* %12, align 4
  %36 = call i64 @FAILED(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %23
  %39 = load i32*, i32** %7, align 8
  %40 = load i32, i32* %12, align 4
  %41 = call i32 @msg_Err(i32* %39, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i32 %40)
  br label %65

42:                                               ; preds = %23
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32*, i32** %13, align 8
  %47 = call i64 @ID3D10Blob_GetBufferPointer(i32* %46)
  %48 = inttoptr i64 %47 to i8*
  %49 = load i32*, i32** %13, align 8
  %50 = call i32 @ID3D10Blob_GetBufferSize(i32* %49)
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 0
  %53 = call i32 @ID3D11Device_CreateInputLayout(i32 %45, %struct.TYPE_10__* getelementptr inbounds ([2 x %struct.TYPE_10__], [2 x %struct.TYPE_10__]* @D3D11_CompileVertexShader.layout, i64 0, i64 0), i32 2, i8* %48, i32 %50, i32* %52)
  store i32 %53, i32* %12, align 4
  %54 = load i32*, i32** %13, align 8
  %55 = call i32 @ID3D10Blob_Release(i32* %54)
  store i32* null, i32** %13, align 8
  %56 = load i32, i32* %12, align 4
  %57 = call i64 @FAILED(i32 %56)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %63

59:                                               ; preds = %42
  %60 = load i32*, i32** %7, align 8
  %61 = load i32, i32* %12, align 4
  %62 = call i32 @msg_Err(i32* %60, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.3, i64 0, i64 0), i32 %61)
  br label %65

63:                                               ; preds = %42
  %64 = load i32, i32* @S_OK, align 4
  store i32 %64, i32* %6, align 4
  br label %67

65:                                               ; preds = %59, %38, %22
  %66 = load i32, i32* %12, align 4
  store i32 %66, i32* %6, align 4
  br label %67

67:                                               ; preds = %65, %63
  %68 = load i32, i32* %6, align 4
  ret i32 %68
}

declare dso_local i32* @D3D11_CompileShader(i32*, i32*, %struct.TYPE_9__*, i8*, i32) #1

declare dso_local i32 @ID3D11Device_CreateVertexShader(i32, i8*, i32, i32*, i32*) #1

declare dso_local i64 @ID3D10Blob_GetBufferPointer(i32*) #1

declare dso_local i32 @ID3D10Blob_GetBufferSize(i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @msg_Err(i32*, i8*, i32) #1

declare dso_local i32 @ID3D11Device_CreateInputLayout(i32, %struct.TYPE_10__*, i32, i8*, i32, i32*) #1

declare dso_local i32 @ID3D10Blob_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
